--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,12 +2,10 @@
 <html lang="ru" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>React Test SD</title>
+        <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="app"></div>
     </body>
-    <script type="text/javascript" src="main.js"></script>
 </html>
