--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,6 +2,8 @@
 <html lang="ru" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <link rel="manifest" href="assets/manifest.json">
+        <link rel="shortcut icon" href="assets/favicon.ico">
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
